big gap bug fixed

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   flex-grow: 1;
   gap: 1%;
   width: 1%;
-  height: 83%;
+  height: 71.4vh;
   scrollbar-width: none;
   overflow-y: scroll;
   overscroll-behavior: none;
@@ -30,9 +30,10 @@ body {
   border: 0;
   font: inherit;
   vertical-align: baseline;
-  display: grid;
-  grid-template-columns: repeat(12, minmax(0, 1fr));
+  display: flex;
+  flex-direction: column;
   padding: 0 48px;
+  gap: 10vh;
   width: 100%;
   margin: auto;
 }
@@ -49,19 +50,13 @@ body {
   -webkit-box-pack: end;
   justify-content: flex-end;
   top: 40px;
-  padding-top: 48px;
-  padding-left: 48px;
-  margin-left: 8px;
-  margin-right: 8px;
-  height: 40%;
+  height: 20%;
+  width: 45%;
   grid-column: 2/8;
   grid-row: 1/3;
 }
 .bigPic {
   box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-  border: 0;
   font: inherit;
   vertical-align: baseline;
   overflow: hidden;
@@ -69,7 +64,6 @@ body {
   flex-grow: 1;
   width: 50%;
   height: 83%;
-  background-color: aqua;
 }
 .pic {
   box-sizing: inherit;
@@ -120,6 +114,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 5%;
+  margin-bottom: 5vh;
 }
 .page {
   list-style-type: none;
@@ -284,10 +279,6 @@ body {
   font-family: "Helvetica Now Display Medium", Helvetica, Arial, sans-serif;
 }
 .tech_specs {
-  box-sizing: inherit;
-  margin: 0;
-  border: 0;
-  font: inherit;
   vertical-align: baseline;
   display: flex;
   flex-direction: column;
@@ -298,7 +289,6 @@ body {
   padding: 32px 36px;
 }
 .intech {
-  font: inherit;
   animation-duration: 0s !important;
   animation-iteration-count: 1 !important;
   transition-duration: 0s !important;
@@ -309,11 +299,6 @@ body {
   box-shadow: none;
 }
 .out_text {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
   vertical-align: baseline;
   width: 100%;
   display: flex;
@@ -321,4 +306,37 @@ body {
   justify-content: space-between;
   -webkit-box-align: center;
   align-items: center;
+}
+.in_text {
+  box-sizing: inherit;
+  vertical-align: baseline;
+  font-weight: 500;
+  font-family: "Helvetica Now Display Medium", Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-size: 1.25rem;
+}
+.down {
+  vertical-align: baseline;
+  flex-direction: column;
+  .intech summary {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  .intech summary::-webkit-details-marker {
+    display: none;
+  }
+  .intech summary::marker {
+    content: "";
+    display: none;
+  }
+  width: 24px;
+  height: 36px;
+  -webkit-box-pack: center;
+  justify-content: center;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  flex-shrink: 0;
 }
